--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@fortawesome/fontawesome-free": "^5.10.1",
+    "@ionic-native/calendar": "^5.12.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-plugin-calendar": "^5.1.4",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
     "rxjs": "~6.5.1",
@@ -59,5 +61,10 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-calendar": {}
+    }
+  }
 }
