--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "~8.1.2",
     "@fortawesome/fontawesome-free": "^5.10.1",
     "@ionic-native/calendar": "^5.12.0",
+    "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-plugin-calendar": "^5.1.4",
+    "cordova-plugin-camera": "^4.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
     "rxjs": "~6.5.1",
@@ -64,7 +66,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-calendar": {}
+      "cordova-plugin-calendar": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
