scanQR agregado y page generate-qr agregada

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@fortawesome/fontawesome-free": "^5.10.1",
+    "@ionic-native/barcode-scanner": "^5.15.1",
     "@ionic-native/calendar": "^5.12.0",
     "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
@@ -32,6 +33,7 @@
     "cordova-plugin-camera": "^4.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -67,7 +69,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-calendar": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "phonegap-plugin-barcodescanner": {}
     }
   }
 }
