--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cordova-plugin-camera": "^4.1.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "ngx-qrcode2": "0.0.9",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
