--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "~8.1.2",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.2",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
@@ -31,8 +34,10 @@
     "@ionic/angular": "^4.7.1",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-email-composer": "^0.9.2",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "hammerjs": "^2.0.8",
     "ngx-qrcode2": "0.0.9",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
@@ -71,7 +76,8 @@
     "plugins": {
       "cordova-plugin-calendar": {},
       "cordova-plugin-camera": {},
-      "phonegap-plugin-barcodescanner": {}
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-email-composer": {}
     }
   }
 }
