--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/calendar": "^5.12.0",
     "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/email-composer": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
