--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@sweetalert2/ngx-sweetalert2": "^6.0.1",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.1.0",
     "core-js": "^2.5.4",
@@ -36,6 +37,7 @@
     "ngx-qrcode2": "0.0.9",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
+    "sweetalert2": "^8.18.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
