--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "firebase": "^6.3.5",
     "hammerjs": "^2.0.8",
     "ngx-qrcode2": "0.0.9",
+    "pdfmake": "^0.1.61",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
