--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/email-composer": "^5.15.1",
+    "@ionic-native/screen-orientation": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -104,7 +105,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "android"
