--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "@ionic/angular": "^4.7.1",
     "@sweetalert2/ngx-sweetalert2": "^6.0.1",
     "angular-calendar": "^0.27.20",
-    "cordova-android": "8.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-plugin-calendar": "^5.1.4",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
     "date-fns": "^1.30.1",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^6.3.5",
     "hammerjs": "^2.0.8",
     "ngx-qrcode2": "0.0.9",
