--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/camera": "^5.15.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/email-composer": "^5.15.1",
+    "@ionic-native/onesignal": "^5.17.1",
     "@ionic-native/screen-orientation": "^5.17.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -47,6 +48,7 @@
     "firebase": "^6.3.5",
     "hammerjs": "^2.0.8",
     "ngx-qrcode2": "0.0.9",
+    "onesignal-cordova-plugin": "^2.7.0",
     "pdfmake": "^0.1.61",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
@@ -108,7 +110,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-screen-orientation": {}
+      "cordova-plugin-screen-orientation": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
